fix: reduce blockquote top/bottom margin and padding for tighter scripture spacing

--- a/css/handout.css
+++ b/css/handout.css
@@ -91,8 +91,8 @@ p {
 
 /* Blockquotes (Scripture quotations) */
 blockquote {
-    margin: 0.1in 0 0.1in 0.25in;
-    padding: 0.08in 0 0.08in 0.15in;
+    margin: 0.04in 0 0.04in 0.25in;
+    padding: 0.04in 0 0.04in 0.15in;
     border-left: 3px solid #666666;
     color: #222222;
     font-style: normal;
